--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>redirecting...</title>
-	<meta http-equiv="refresh" content="0; url=undersite.html">
+	<meta http-equiv="refresh" content="0; url=Undersite.html">
 </head>
 <body>
-	<p>If you aren't redirected, <a href="undersite.html">click here</a>.</p>
+	<p>If you aren't redirected, <a href="Undersite.html">click here</a>.</p>
 </body>
 </html>
