--- a/undersite.html
+++ b/undersite.html
@@ -11,7 +11,7 @@
         }
         @font-face {
             font-family: 'PixelOperator';
-            src: url('Fonts/PixelOperator-Bold.ttf') format('truetype');
+            src: url('Fonts/pixeloperator.ttf') format('truetype');
         }
         body {
             font-family: 'PixelOperator', sans-serif;
@@ -45,7 +45,7 @@
 	<style>
         @font-face {
             font-family: 'PixelOperator';
-            src: url('Fonts/PixelOperator-Bold.ttf') format('truetype');
+            src: url('Fonts/pixeloperator.ttf') format('truetype');
         }
 
         @keyframes shake {
