--- a/undersite.html
+++ b/undersite.html
@@ -182,7 +182,7 @@
     <div class="rectangle">
         <!-- Ylnk -->
         <div class="yes-container">
-            <a href="Videos/sad anime girl.mp4" class="no-style-link">
+            <a href="https://media.tenor.com/zomM1TWL5PgAAAAM/dog-cute.gif" class="no-style-link">
                 <img src="Images/heart.png" alt="tobert nuclear mutant fox" style="width:30px;height:30px;">
                 <span>Yes</span>
             </a>
