--- a/undersite.html
+++ b/undersite.html
@@ -11,7 +11,7 @@
         }
         @font-face {
             font-family: 'PixelOperator';
-            src: url('Fonts/pixeloperator.ttf') format('truetype');
+            src: url('fonts/PixelOperator-Bold.ttf') format('truetype');
         }
         body {
             font-family: 'PixelOperator', sans-serif;
@@ -22,7 +22,9 @@
 <head>
 <body style="background-color: #242526;">
 <!-- Mother dog and amoeba dog -->
-<img src="Images/Dog.webp" alt="tobert nuclear mutant fox" style="text-align:center;width:1px;height:1px;">
+<a href="Lost/Found.html">
+    <img src="Images/Dog.webp" alt="tobert nuclear mutant fox" style="text-align:center;width:1px;height:1px;">
+</a></a>
 <img src="Images/Dog.webp" alt="tobert nuclear mutant fox" style="width:50px;height:50px;display:block;margin:auto;">
 	<h1 style="text-align:center;color:White;font-family:PixelOperator;">OUCH!</h1>
 	<p style="text-align:center;color:White;font-family:PixelOperator;">the fucking thing has bitten you</p>
@@ -45,7 +47,7 @@
 	<style>
         @font-face {
             font-family: 'PixelOperator';
-            src: url('Fonts/pixeloperator.ttf') format('truetype');
+            src: url('fonts/PixelOperator-Bold.ttf') format('truetype');
         }
 
         @keyframes shake {
@@ -182,7 +184,7 @@
     <div class="rectangle">
         <!-- Ylnk -->
         <div class="yes-container">
-            <a href="Videos/sadanimegirl.mp4" class="no-style-link">
+            <a href="Videos/sad anime girl.mp4" class="no-style-link">
                 <img src="Images/heart.png" alt="tobert nuclear mutant fox" style="width:30px;height:30px;">
                 <span>Yes</span>
             </a>
