--- a/undersite.html
+++ b/undersite.html
@@ -4,195 +4,147 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Wuff!</title>
-	 <style>
-	 <!-- dis shits boken? no cursor as of yet -->
+
+	<!-- Cursor and Fonts -->
+	<style>
 		body {
-            cursor: url('custom-cursor.png'), auto;
-        }
-        @font-face {
-            font-family: 'PixelOperator';
-            src: url('fonts/PixelOperator-Bold.ttf') format('truetype');
-        }
-        body {
-            font-family: 'PixelOperator', sans-serif;
-        }
-	
-    </style>
-	
-<head>
-<body style="background-color: #242526;">
-<!-- Mother dog and amoeba dog -->
-<a href="Lost/Found.html">
-    <img src="Images/Dog.webp" alt="tobert nuclear mutant fox" style="text-align:center;width:1px;height:1px;">
-</a></a>
-<img src="Images/Dog.webp" alt="tobert nuclear mutant fox" style="width:50px;height:50px;display:block;margin:auto;">
-	<h1 style="text-align:center;color:White;font-family:PixelOperator;">OUCH!</h1>
-	<p style="text-align:center;color:White;font-family:PixelOperator;">the fucking thing has bitten you</p>
-	
+			cursor: url('custom-cursor.png'), auto;
+		}
+
+		@font-face {
+			font-family: 'PixelOperator';
+			src: url('fonts/PixelOperator-Bold.ttf') format('truetype');
+		}
+
+		body {
+			font-family: 'PixelOperator', sans-serif;
+			background-color: black;
+			color: white;
+			margin: 0;
+			padding: 20px;
+			text-align: center;
+		}
+
+		/* Shake Animation */
+		@keyframes shake {
+			0% { transform: translate(1px, 1px) rotate(0deg); }
+			10% { transform: translate(-1px, -2px) rotate(-1deg); }
+			20% { transform: translate(-3px, 0px) rotate(1deg); }
+			30% { transform: translate(3px, 2px) rotate(0deg); }
+			40% { transform: translate(1px, -1px) rotate(1deg); }
+			50% { transform: translate(-1px, 2px) rotate(-1deg); }
+			60% { transform: translate(-3px, 1px) rotate(0deg); }
+			70% { transform: translate(3px, 1px) rotate(-1deg); }
+			80% { transform: translate(-1px, -1px) rotate(1deg); }
+			90% { transform: translate(1px, 2px) rotate(0deg); }
+			100% { transform: translate(1px, -2px) rotate(-1deg); }
+		}
+
+		.text-wrapper {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			position: relative;
+			width: 100%;
+			top: 50%;
+			transform: translateY(-50%);
+		}
+
+		.shaking-text {
+			font-size: 2rem;
+			font-weight: bold;
+			line-height: 1.5;
+			white-space: nowrap;
+			color: red;
+		}
+
+		.shaking-text span {
+			display: inline-block;
+			animation: shake 0.5s infinite;
+		}
+
+		/* Animation delays for each letter */
+		.shaking-text span:nth-child(n) {
+			animation-delay: calc((var(--i) - 1) * 0.1s);
+		}
+
+		.rectangle {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			width: 200px;
+			height: 50px;
+			border: 2px solid white;
+			background-color: transparent;
+			color: white;
+			font-family: PixelOperator;
+			padding: 0 10px;
+			margin: auto;
+			margin-top: 50px;
+		}
+
+		.yes-container {
+			display: flex;
+			align-items: center;
+			gap: 5px;
+		}
+	</style>
+
+	<link rel="stylesheet" href="CSS/NoStyleHyperlink.css">
+</head>
+
+<body>
+	<!-- Hidden Image Link -->
+	<a href="Lost/Found.html">
+		<img src="Images/Dog.webp" alt="tobert nuclear mutant fox" style="width:1px;height:1px;">
+	</a>
+
+	<!-- Centered Image and Text -->
+	<img src="Images/Dog.webp" alt="tobert nuclear mutant fox" style="width:50px;height:50px;display:block;margin:auto;">
+	<h1 style="color:White;">OUCH!</h1>
+	<p style="color:White;">the fucking thing has bitten you</p>
+
+	<!-- Background Music -->
 	<audio autoplay loop>
 		<source src="Audio/Dogsong.mp3" type="audio/mp3">
 	</audio>
-	
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+	<!-- Shaking Text -->
+	<div class="text-wrapper">
+		<p class="shaking-text">
+			<span style="--i:1;">W</span><span style="--i:2;">o</span><span style="--i:3;">u</span><span style="--i:4;">l</span><span style="--i:5;">d</span>
+			<span style="--i:6;"> </span>
+			<span style="--i:7;">Y</span><span style="--i:8;">o</span><span style="--i:9;">u</span>
+			<span style="--i:10;"> </span>
+			<span style="--i:11;">L</span><span style="--i:12;">i</span><span style="--i:13;">k</span><span style="--i:14;">e</span>
+			<span style="--i:15;"> </span>
+			<span style="--i:16;">T</span><span style="--i:17;">o</span>
+			<span style="--i:18;"> </span>
+			<span style="--i:19;">K</span><span style="--i:20;">i</span><span style="--i:21;">l</span><span style="--i:22;">l</span>
+			<span style="--i:23;"> </span>
+			<span style="--i:24;">I</span><span style="--i:25;">t</span><span style="--i:26;">?</span>
+		</p>
+	</div>
+
+	<!-- Choice Buttons -->
+	<div class="rectangle">
+		<div class="yes-container">
+			<a href="Videos/sad anime girl.mp4" class="no-style-link">
+				<img src="Images/heart.png" alt="Heart icon" style="width:30px;height:30px;">
+				<span>Yes</span>
+			</a>
+		</div>
+
+		<a href="Videos/Px2u.gif" class="no-style-link">
+			<span>No</span>
+		</a>
+	</div>
 </body>
 </html>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<head>
-	<style>
-        @font-face {
-            font-family: 'PixelOperator';
-            src: url('fonts/PixelOperator-Bold.ttf') format('truetype');
-        }
-
-        @keyframes shake {
-            0% { transform: translate(1px, 1px) rotate(0deg); }
-            10% { transform: translate(-1px, -2px) rotate(-1deg); }
-            20% { transform: translate(-3px, 0px) rotate(1deg); }
-            30% { transform: translate(3px, 2px) rotate(0deg); }
-            40% { transform: translate(1px, -1px) rotate(1deg); }
-            50% { transform: translate(-1px, 2px) rotate(-1deg); }
-            60% { transform: translate(-3px, 1px) rotate(0deg); }
-            70% { transform: translate(3px, 1px) rotate(-1deg); }
-            80% { transform: translate(-1px, -1px) rotate(1deg); }
-            90% { transform: translate(1px, 2px) rotate(0deg); }
-            100% { transform: translate(1px, -2px) rotate(-1deg); }
-        }
-        body {
-            background-color: black;
-            color: white;
-            margin: 0;
-            padding: 20px;
-            font-family: Arial, sans-serif;
-            text-align: center;
-        }
-		
-        .text-wrapper {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: relative;
-            width: 100%;
-            top: 50%;
-            transform: translateY(-50%);
-        }
-
-        .shaking-text {
-            font-family: 'PixelOperator', sans-serif;
-            font-size: 2rem;
-            font-weight: bold;
-            line-height: 1.5;
-            white-space: nowrap; /* Prevent line breaks, keeps everything on one line */
-            color: red;
-        }
-
-        .shaking-text span {
-            display: inline-block;
-            animation: shake 0.5s infinite;
-        }
-
-        /* LL IT JUST SHAKES ON ITS OWN FOR SOME GODDAMN REASON */
-		.shaking-text span:nth-child(1) { animation-delay: 0s; }
-        .shaking-text span:nth-child(2) { animation-delay: 0.1s; }
-        .shaking-text span:nth-child(3) { animation-delay: 0.2s; }
-        .shaking-text span:nth-child(4) { animation-delay: 0.3s; }
-        .shaking-text span:nth-child(5) { animation-delay: 0.4s; }
-        .shaking-text span:nth-child(6) { animation-delay: 0.5s; }
-        .shaking-text span:nth-child(7) { animation-delay: 0.6s; }
-        .shaking-text span:nth-child(8) { animation-delay: 0.7s; }
-        .shaking-text span:nth-child(9) { animation-delay: 0.8s; }
-        .shaking-text span:nth-child(10) { animation-delay: 0.9s; }
-        .shaking-text span:nth-child(11) { animation-delay: 1s; }
-        .shaking-text span:nth-child(12) { animation-delay: 1.1s; }
-        .shaking-text span:nth-child(13) { animation-delay: 1.2s; }
-        .shaking-text span:nth-child(14) { animation-delay: 1.3s; }
-        .shaking-text span:nth-child(15) { animation-delay: 1.4s; }
-        .shaking-text span:nth-child(16) { animation-delay: 1.5s; }
-        .shaking-text span:nth-child(17) { animation-delay: 1.6s; }
-        .shaking-text span:nth-child(18) { animation-delay: 1.7s; }
-        .shaking-text span:nth-child(19) { animation-delay: 1.8s; }
-        .shaking-text span:nth-child(20) { animation-delay: 1.9s; }
-		.shaking-text span:nth-child(21) { animation-delay: 2.0s; }
-		.shaking-text span:nth-child(22) { animation-delay: 2.1s; }
-		.shaking-text span:nth-child(23) { animation-delay: 2.2s; }
-		.shaking-text span:nth-child(24) { animation-delay: 2.3s; }
-		.shaking-text span:nth-child(25) { animation-delay: 2.4s; }
-		.shaking-text span:nth-child(26) { animation-delay: 2.5s; }
-		
-    </style>
-</head>
-<body>
-
-
-    <div class="text-wrapper">
-        <p class="shaking-text">
-            <span>W</span> <span>o</span> <span>u</span> <span>l</span> <span>d</span>
-            <span> </span>
-            <span>Y</span> <span>o</span> <span>u</span>
-            <span> </span>
-            <span>L</span> <span>i</span> <span>k</span> <span>e</span>
-            <span> </span>
-            <span>T</span> <span>o</span>
-            <span> </span>
-            <span>K</span> <span>i</span> <span>l</span> <span>l</span>
-            <span> </span>
-            <span>I</span> <span>t</span> <span>?</span>
-        </p>
-    </div>
-
-</body>
-</html>
-
-
-
-<head>
-	<style>
-        .rectangle {
-			display: block; 
-			margin: auto;
-            display: flex;                  
-            justify-content: space-between; 
-            align-items: center;            
-            width: 200px;                   
-            height: 50px;                   
-            border: 2px solid white;        
-            background-color: transparent;  
-            color: white;                   
-            font-family: PixelOperator; 
-            padding: 0 10px;                
-        }
-
-        .yes-container {
-            display: flex; 
-            align-items: center; 
-            gap: 5px; 
-        }
-    </style>
-</head>
-
-
-<head>
-    <link rel="stylesheet" href="CSS/NoStyleHyperlink.css"> 
-</head>
-
-<body>
-    <div class="rectangle">
-        <!-- Ylnk -->
-        <div class="yes-container">
-            <a href="Videos/sad anime girl.mp4" class="no-style-link">
-                <img src="Images/heart.png" alt="tobert nuclear mutant fox" style="width:30px;height:30px;">
-                <span>Yes</span>
-            </a>
-        </div>
-        
-        <!-- nlnk -->
-        <a href="Videos/Px2u.gif" class="no-style-link">
-            <span>No</span>
-        </a>
-    </div>
-</body>
