--- a/undersite.html
+++ b/undersite.html
@@ -18,7 +18,7 @@
 
 		body {
 			font-family: 'PixelOperator', sans-serif;
-			background-color: black;
+			background-color: #242526;
 			color: white;
 			margin: 0;
 			padding: 20px;
@@ -148,4 +148,5 @@
 	</div>
 </body>
 </html>
+
 
