--- a/undersite.html
+++ b/undersite.html
@@ -13,7 +13,7 @@
 
 		@font-face {
 			font-family: 'PixelOperator';
-			src: url('fonts/PixelOperator.ttf') format('truetype');
+			src: url('Fonts/pixeloperator.ttf') format('truetype');
 		}
 
 		body {
@@ -148,5 +148,6 @@
 	</div>
 </body>
 </html>
+
 
 
