--- a/myspace/Myspace.html
+++ b/myspace/Myspace.html
@@ -197,7 +197,7 @@
       <a href="https://www.tiktok.com/@pawbotomized" target="_blank">Tiktok</a>
       <a href="https://steamcommunity.com/id/Hazardouspet/" target="_blank">Steam</a>
       <a href="https://www.tumblr.com/pawbotomized" target="_blank">Tumblr</a>
-      <a href="Link" target="_blank">My Other Page</a>
+      <a href="https://gaylittledog.click/undersite.html" target="_blank">My Other Page</a>
       <img class="badge" src="https://img1.picmix.com/output/pic/normal/3/0/2/4/12744203_8363b.gif" alt="Internet Girl Badge">
     </section>
 
@@ -241,5 +241,6 @@
 
 </body>
 </html>
+
 
 
