--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>redirecting...</title>
-	<meta http-equiv="refresh" content="0; url="myspace/myspace.html">
+	<meta http-equiv="refresh" content="0; url="myspace/Myspace.html">
 </head>
 <body>
 	<p>If you aren't redirected, <a href="myspace/myspace.html">click here</a>.</p>
 </body>
 </html>
+
 
