--- a/myspace/Myspace.html
+++ b/myspace/Myspace.html
@@ -213,17 +213,11 @@
 
     <section class="comments">
       <h2>Guestbook</h2>
-      <div id="HCB_comment_box">Loading comments...</div>
-      <link rel="stylesheet" href="https://www.htmlcommentbox.com/static/skins/default/skin.css" />
-      <script id="hcb">
-        if (!window.hcb_user) hcb_user = {};
-        (function() {
-          var s = document.createElement("script");
-          s.type = "text/javascript";
-          s.src = "https://www.htmlcommentbox.com/jread?page=rowanspagecornerthing&mod=%241%24wq1rdBcg%24g52SP0nZbHHc7EJ2eyXRi1";
-          s.async = true;
-          document.head.appendChild(s);
-        })();
+      <!-- begin wwww.htmlcommentbox.com -->
+ <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Widget</a> is loading comments...</div>
+ <link rel="stylesheet" type="text/css" href="https://www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
+ <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="https://www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&mod=%241%24wq1rdBcg%24ohwDRT.mb5wDgfzmclmmd%2F"+"&opts=16798&num=10&ts=1754533131876");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
+<!-- end www.htmlcommentbox.com -->
       </script>
     </section>
 
@@ -241,6 +235,7 @@
 
 </body>
 </html>
+
 
 
 
