--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>redirecting...</title>
-	<meta http-equiv="refresh" content="0; url="https://gaylittledog.click/myspace/Myspace.html">
+	<meta http-equiv="refresh" content="0; url="myspace/Myspace.html">
 </head>
 <body>
-	<p>If you aren't redirected, <a href="https://gaylittledog.click/myspace/Myspace.html">click here</a>.</p>
+	<p>If you aren't redirected, <a href="myspace/Myspace.html">click here</a>.</p>
 </body>
 </html>
+
 
 
 
