--- a/myspace/Myspace.html
+++ b/myspace/Myspace.html
@@ -208,7 +208,7 @@
       <img src="https://blinkies.cafe/b/display/0069-alien.gif" alt="Alien Blinkie">
       <img src="https://blinkies.cafe/b/display/0031-dogpaw.gif" alt="Dog Paw Blinkie">
       <img src="https://blinkies.cafe/b/display/0114-tbh.gif" alt="tbh Blinkie">
-      <img src="Images/Trans.gif" alt="Trans Pride Blinkie">
+      <img src="Images/trans.gif" alt="Trans Pride Blinkie">
     </div>
 
     <section class="comments">
@@ -235,6 +235,7 @@
 
 </body>
 </html>
+
 
 
 
