--- a/myspace/Myspace.html
+++ b/myspace/Myspace.html
@@ -169,7 +169,7 @@
         <p><strong>Location:</strong> Denmark :3c </p>
         <p><strong>Pronouns:</strong> She/Her They/Them Pup/Pups etc. </p>
       
-        <p><strong>About Me:</strong> <br>Southern (SC, USA) TGirl who packed up and moved everything to Denmark 4 love :3 <br> Lv. 23 Professional Online Loser 💀🖤 </p>
+        <p><strong>About Me:</strong> <br>Southern (SC, USA) TGirl who packed up and moved everything to Denmark 4 good :3 <br> Lv. 23 Professional Online Loser 💀🖤 </p>
       </div>
     </div>
 
@@ -235,6 +235,7 @@
 
 </body>
 </html>
+
 
 
 
