--- a/Lost/Found.html
+++ b/Lost/Found.html
@@ -22,14 +22,15 @@
 </head>
 <body>
    <audio autoplay loop>
-		<source src="Audio/Find her, Lost Girl, Ferris Wheel.wav" type="audio/wav">
+		<source src="Audio/Find her, Lost Girl, Ferris Wheel.mp3" type="audio/mp3">
 	</audio>
     <audio id="bg-audio" autoplay loop>
-        <source src="Audio/Find her, Lost Girl, Ferris Wheel.wav" type="audio/wav">
+        <source src="Audio/Find her, Lost Girl, Ferris Wheel.mp3" type="audio/mp3">
     </audio>
     <script>
         document.getElementById('bg-audio').volume = 0.3;
     </script>
     <img src="Videos/guitar_room.gif" alt="Centered Image" class="center-image" style="position: absolute; bottom: 0; left: 50%; transform: translateX(-50%); max-width: 90vw; max-height: 90vh;">
 </body>
+
 </html>
